--- a/FeedApp/templates/FeedApp/base.html
+++ b/FeedApp/templates/FeedApp/base.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'FeedApp:profile' %}">My Profile</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'FeedApp:myfeed' %}">My Feed</a>
+                </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
