--- a/FeedApp/templates/FeedApp/base.html
+++ b/FeedApp/templates/FeedApp/base.html
@@ -32,14 +32,15 @@
                     <a class="nav-link" href="{% url 'FeedApp:profile' %}">My Profile</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'FeedApp:friends' %}"> Friends Requests</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'FeedApp:myfeed' %}">My Feed</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'FeedApp:friendsfeed' %}">Friends Feed</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'FeedApp:friends' %}"> Friends </a>
-                </li>
+
             </ul>
 
             <ul class="navbar-nav ml-auto">
