Rap up Background Image

--- a/FeedApp/templates/FeedApp/index.html
+++ b/FeedApp/templates/FeedApp/index.html
@@ -1,12 +1,23 @@
 {% extends "FeedApp/base.html" %}
 
 {% block page_header %}
-    <div class="jumbotron">
-       <h1 class="display-3">Feed</h1>
-            <p class="lead">A Social Network where you can be you.
-            </p>
 
-            <a class="btn btn-lg btn-outline-primary" href="{% url 'users:register' %}"
-            role="button">Join Now &raquo;</a>
+<style>
+    .jumbotron {
+        background-image: url("images/socialmedia..jpeg");
+        background-size: cover;
+    }
+</style>
+
+<div class="jumbotron">
+    <h1 class="display-3">Welcome to Feed</h1>
+    <p class="lead">A Social Network where you can be you.</p>
+    <hr class="my-0">
+    <p>Connect with friends and families, share wonderful moments, and keep the memory alive.</p>
+    <a class="btn btn-lg btn-outline-primary" href="{% url 'users:register' %}" role="button">Join Now &raquo;</a>
+    <!-- Colorful section -->
+    <div class="colorful-section">
     </div>
-{% endblock page_header %}
+
+
+    {% endblock page_header %}
